--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.7",
-    "systemjs": "0.19.22",
+    "body-parser": "^1.17.1",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "express": "^4.15.2",
+    "method-override": "^2.3.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.22",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
