--- a/package.json
+++ b/package.json
@@ -2,30 +2,13 @@
   "name": "katchupp",
   "version": "1.0.0",
   "scripts": {
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "typings": "typings",
-    "postinstall": "typings install"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.7",
     "body-parser": "^1.17.1",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
     "express": "^4.15.2",
-    "method-override": "^2.3.7",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.22",
-    "zone.js": "0.5.15"
-  },
-  "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.1.0",
-    "typescript": "^1.7.5",
-    "typings": "^0.6.8"
+    "method-override": "^2.3.7"
   }
 }
