--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "method-override": "^2.3.7"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^2.2.0"
   }
 }
