--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "method-override": "^2.3.7"
+    "method-override": "^2.3.7",
+    "nodemon": "^1.11.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
