--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "method-override": "^2.3.7",
+    "mongoose": "^4.9.2",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {
