--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.15.2",
     "method-override": "^2.3.7",
     "mongoose": "^4.9.2",
+    "node-schedule": "^1.2.3",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {
